proxy/docker/data/envoy-replay.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_inbound
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 15000
      listener_filters:
        - name: envoy.filters.listener.http_inspector
          typed_config: {}
        - name: envoy.filters.listener.original_dst
          typed_config: {}
      filter_chains:
        - filter_chain_match:
            transport_protocol: "tls"
            destination_port: 443
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["h2","http/1.1"]
                tls_certificates:
                  - certificate_chain: { filename: "cert/cacert.pem" }
                    private_key: { filename: "cert/privkey.pem" }
        - filter_chain_match:
            transport_protocol: "tls"
            application_protocols: ["http/1.0","http/1.1","h2"]
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["h2","http/1.1"]
                tls_certificates:
                  - certificate_chain: { filename: "cert/cacert.pem" }
                    private_key: { filename: "cert/privkey.pem" }
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: myroute
                  virtual_hosts:
                    - name: myservice
                      domains: ["*"]
                      routes:
                        match:
                          prefix: "/"
                        route:
                          cluster: cluster-default-tls
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "inbound_serial"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "inbound_replay","host":"replay"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "inbound_record","host":"collector","path":"/record"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.router
        - filter_chain_match:
            application_protocols: ["http/1.0","http/1.1"]
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: myroute
                  virtual_hosts:
                    - name: myservice
                      domains: ["*"]
                      routes:
                        match:
                          prefix: "/"
                        route:
                          cluster: cluster-default
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "inbound_serial"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "inbound_replay","host":"replay"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "inbound_record","host":"collector","path":"/record"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.router
        - filter_chain_match:
            application_protocols: []
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: tcp
                cluster: cluster-default

    - name: listener_outbound
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 15001
      listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config: {}
        - name: envoy.filters.listener.http_inspector
          typed_config: {}
        - name: envoy.filters.listener.original_dst
          typed_config: {}
      filter_chains:
        - filter_chain_match:
            transport_protocol: "tls"
            destination_port: 443
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["h2","http/1.1"]
                tls_certificates:
                  - certificate_chain: { filename: "cert/cacert.pem" }
                    private_key: { filename: "cert/privkey.pem" }
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: myroute
                  virtual_hosts:
                    - name: myservice
                      domains: ["*"]
                      routes:
                        match:
                          prefix: "/"
                        route:
                          cluster: cluster-default-tls
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "outbound_replay","host":"replay"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "outbound_record","host":"collector","path":"/record"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.router
        - filter_chain_match:
            transport_protocol: "tls"
            application_protocols: ["http/1.0","http/1.1","h2"]
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["h2","http/1.1"]
                tls_certificates:
                  - certificate_chain: { filename: "cert/cacert.pem" }
                    private_key: { filename: "cert/privkey.pem" }
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: myroute
                  virtual_hosts:
                    - name: myservice
                      domains: ["*"]
                      routes:
                        match:
                          prefix: "/"
                        route:
                          cluster: cluster-default-tls
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "outbound_replay","host":"replay"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "outbound_record","host":"collector","path":"/record"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.router
        - filter_chain_match:
            application_protocols: ["http/1.0","http/1.1","http/2"]
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: myroute
                  virtual_hosts:
                    - name: myservice
                      domains: ["*"]
                      routes:
                        match:
                          prefix: "/"
                        route:
                          cluster: cluster-default
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "outbound_replay","host":"replay","path":"/replay_outbound"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: '{"plugin_type": "outbound_record","host":"collector","path":"/record"}'
                          vm_config:
                            vm_id: "intercept"
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/home/intercept.wasm"
                  - name: envoy.filters.http.router
        - filter_chain_match:
            application_protocols: []
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: tcp
                cluster: cluster-default

  clusters:
    - name: cluster-default
      connect_timeout: 5s
      type: ORIGINAL_DST
      lb_policy: CLUSTER_PROVIDED
    - name: cluster-default-tls
      connect_timeout: 5s
      type: ORIGINAL_DST
      lb_policy: CLUSTER_PROVIDED
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            alpn_protocols: [ "h2","http/1.1" ]
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          upstream_http_protocol_options:
            auto_sni: true
          common_http_protocol_options:
            idle_timeout: 5s
          auto_config: {}
    - name: collector
      connect_timeout: 5s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: collector
                      port_value: 80
    - name: replay
      connect_timeout: 5s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: replay
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: replay
                      port_value: 80
